nightly: attempting to solve a display issue for tables on mobile devices. Wrapping table in container after markdown is rendered

--- a/src/assets/styles/_global.scss
+++ b/src/assets/styles/_global.scss
@@ -247,8 +247,11 @@ table {
     border: 1px solid $crust;
     border-radius: 0.25em;
     box-shadow: 0px 1px 2px 1px rgba($crust, 0.4);
-    margin: 1em 0;
-    width: 100%;
+    margin: 1em 0; padding: 0;
+    // word-wrap: break-word;
+    table-layout: fixed;
+    // display: grid;
+    // grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 
     thead {
         background: $crust; color: $subtext0;
@@ -257,7 +260,7 @@ table {
         tr, th, td { border: none; }
 
         tr {
-            th { padding: 0.5em 0.65em; word-wrap: break-word; }
+            th { padding: 0.5em 0.65em; word-wrap: break-word; min-width: 1em; max-width: auto; }
         }
     }
 
@@ -272,7 +275,7 @@ table {
         }
 
         tr {
-            td { padding: 0.5em 0.65em; word-wrap: break-word; }
+            td { padding: 0.5em 0.65em; word-wrap: break-word; min-width: 1em; max-width: auto; }
         }
     }
 
